--- a/9.13国动项目演示/index.html
+++ b/9.13国动项目演示/index.html
@@ -6,81 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>演示</title>
+    <link rel="stylesheet" href="index.css">
     <style>
-        body {
-            box-sizing: border-box;
-        }
-
-        body,
-        li,
-        ul {
-            padding: 0;
-            margin: 0;
-        }
-
-        /* .layout {
-            position: relative;
-            width: 100%;
-            height: 100%;
-        } */
-        body{
-            position: relative;
-            background-color: rgba(23, 66, 139,0.9);
-        }
-        .content {
-            /* position: absolute;
-            left: 50%;
-            right: 50%;
-            transform: translate(-50%, -50%); */
-            position: fixed;
-            left: 0;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            width: 1200px;
-            height: 100%;
-            margin: 0 auto;
-            /* border: 1px solid red; */
-        }
-        .content>ul{
-            width:100%;
-            height:100%;
-            /* border: 1px solid pink; */
-        }
-        .content>ul:after {
-            content: '';
-            display: block;
-            clear: both;
-        }
-
-        .content li {
-            position: relative;
-            list-style: none;
-            /* border: 1px solid pink; */
-            float: left;
-            width: 225px;
-            margin-left: 60px;
-            margin-top:50px; 
-        }
-        .content a {
-            cursor: pointer;
-            text-decoration: none;
-        }
-        .content img {
-            width: 225px;
-            height: 225px;
-            /* border: 1px solid green; */
-        }
-
-        .content p {
-            /* position: absolute; */
-            margin-left: -25px;
-            margin-top: -10px;
-            text-align: center;
-            font-size: 25px;
-            color: #fff;
-
-        }
     </style>
 </head>
 
