施工详情地图-图片

--- a/9.13国动项目演示2/index.html
+++ b/9.13国动项目演示2/index.html
@@ -50,7 +50,7 @@
             /* padding: 15px 0;   */
         }
 
-        .clearfix {
+        .clearfix:after{
             /*清除浮动*/
             content: '';
             display: block;
