--- a/9.28v0.2/web/index.html
+++ b/9.28v0.2/web/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="app"></div>
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=LqUOHyuUwsHDzZpOTrmb4fSxx257S8zt&s=1"></script>
-  <script type="text/javascript" src="http://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.js"></script>
+  <script type="text/javascript" src="https://api.map.baidu.com/library/TrafficControl/1.4/src/TrafficControl_min.js"></script>
   <script type="text/javascript" src="static/distance.js"></script>
   <script>
   </script>
